ref #842 handle some deprecated API + update java lib dependencies